completed seq-to-seq model

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,14 +107,12 @@
     "        if letter not in target_characters:\n",
     "            target_characters.append(letter)\n",
     "\n",
-    "    print(target_characters)\n",
-    "\n",
     "    return list(transcription)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,48 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-']\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n",
-      "['t', 'h', 'e', ' ', 'r', 'a', 'c', 'k', 'p', 's', 'o', 'n', 'm', 'i', 'l', 'b', 'u', '\"', 'f', 'w', '.', 'd', 'v', 'j', 'y', 'g', 'z', ',', 'x', 'q', '-', \"'\"]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_name = 0\n",
     "x_processed_data = []\n",
     "y_processed_data = []\n",
-    "\n",
-    "print(target_characters)\n",
     "\n",
     "#pre-processes all the data\n",
     "for i in range(25):\n",
@@ -236,18 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[' ', '\"', \"'\", ',', '-', '.', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "{' ': 0, '\"': 1, \"'\": 2, ',': 3, '-': 4, '.': 5, 'a': 6, 'b': 7, 'c': 8, 'd': 9, 'e': 10, 'f': 11, 'g': 12, 'h': 13, 'i': 14, 'j': 15, 'k': 16, 'l': 17, 'm': 18, 'n': 19, 'o': 20, 'p': 21, 'q': 22, 'r': 23, 's': 24, 't': 25, 'u': 26, 'v': 27, 'w': 28, 'x': 29, 'y': 30, 'z': 31}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "target_token_index = dict([(char, i) for i, char in enumerate(target_characters)])\n",
     "\n",
@@ -274,21 +228,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-05 21:00:54.625802: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n"
+      "2023-12-06 11:21:43.667752: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n",
+      "2023-12-06 11:21:44.787637: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-12-06 11:21:44.789905: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-12-06 11:21:44.791951: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n",
+      "2023-12-06 11:21:45.137020: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-12-06 11:21:45.139388: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-12-06 11:21:45.141382: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n"
      ]
     }
    ],
    "source": [
     "# Define an input sequence and process it.\n",
     "encoder_inputs = keras.Input(shape=(None, num_encoder_tokens))\n",
-    "encoder = keras.layers.LSTM(latent_dim, return_state=True)\n",
+    "encoder = keras.layers.LSTM(LATENT_DIM, return_state=True)\n",
     "encoder_outputs, state_h, state_c = encoder(encoder_inputs)\n",
     "\n",
     "# We discard `encoder_outputs` and only keep the states.\n",
@@ -300,7 +266,7 @@
     "# We set up our decoder to return full output sequences,\n",
     "# and to return internal states as well. We don't use the\n",
     "# return states in the training model, but we will use them in inference.\n",
-    "decoder_lstm = keras.layers.LSTM(latent_dim, return_sequences=True, return_state=True)\n",
+    "decoder_lstm = keras.layers.LSTM(LATENT_DIM, return_sequences=True, return_state=True)\n",
     "decoder_outputs, _, _ = decoder_lstm(decoder_inputs, initial_state=encoder_states)\n",
     "decoder_dense = keras.layers.Dense(num_decoder_tokens, activation=\"softmax\")\n",
     "decoder_outputs = decoder_dense(decoder_outputs)\n",
