moved testing functions to their own file

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -23,7 +23,13 @@
     "\n",
     "target_characters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q','r','s','t','u','v','w','x','y','z',' ']\n",
     "target_characters = sorted(target_characters)\n",
-    "target_token_index = dict([(char, i) for i, char in enumerate(target_characters)])"
+    "target_token_index = dict([(char, i) for i, char in enumerate(target_characters)])\n",
+    "\n",
+    "num_encoder_tokens = 256\n",
+    "num_decoder_tokens = len(target_characters)\n",
+    "max_decoder_seq_length = 200\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -31,7 +37,99 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = keras.models.load_model(\"s2s_model.keras\")\n",
+    "\n",
+    "encoder_inputs = model.input[0]  # input_1\n",
+    "encoder_outputs, state_h_enc, state_c_enc = model.layers[2].output  # lstm_1\n",
+    "encoder_states = [state_h_enc, state_c_enc]\n",
+    "encoder_model = keras.Model(encoder_inputs, encoder_states)\n",
+    "\n",
+    "decoder_inputs = model.input[1]  # input_2\n",
+    "decoder_state_input_h = keras.Input(shape=(LATENT_DIM,))\n",
+    "decoder_state_input_c = keras.Input(shape=(LATENT_DIM,))\n",
+    "decoder_states_inputs = [decoder_state_input_h, decoder_state_input_c]\n",
+    "decoder_lstm = model.layers[3]\n",
+    "decoder_outputs, state_h_dec, state_c_dec = decoder_lstm(\n",
+    "    decoder_inputs, initial_state=decoder_states_inputs\n",
+    ")\n",
+    "decoder_states = [state_h_dec, state_c_dec]\n",
+    "decoder_dense = model.layers[4]\n",
+    "decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "decoder_model = keras.Model(\n",
+    "    [decoder_inputs] + decoder_states_inputs, [decoder_outputs] + decoder_states\n",
+    ")\n",
+    "\n",
+    "# Reverse-lookup token index to decode sequences back to\n",
+    "# something readable.\n",
+    "reverse_target_char_index = dict((i, char) for char, i in target_token_index.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_sequence(input_seq):\n",
+    "    # Encode the input as state vectors.\n",
+    "    states_value = encoder_model.predict(input_seq, verbose=0)\n",
+    "\n",
+    "    # Generate empty target sequence of length 1.\n",
+    "    target_seq = np.zeros((1, 1, num_decoder_tokens))\n",
+    "    # Populate the first character of target sequence with the start character.\n",
+    "    target_seq[0, 0, target_token_index[\"\\t\"]] = 1.0\n",
+    "\n",
+    "    # Sampling loop for a batch of sequences\n",
+    "    # (to simplify, here we assume a batch of size 1).\n",
+    "    stop_condition = False\n",
+    "    decoded_sentence = \"\"\n",
+    "    while not stop_condition:\n",
+    "        output_tokens, h, c = decoder_model.predict(\n",
+    "            [target_seq] + states_value, verbose=0\n",
+    "        )\n",
+    "\n",
+    "        # Sample a token\n",
+    "        sampled_token_index = np.argmax(output_tokens[0, -1, :])\n",
+    "        sampled_char = reverse_target_char_index[sampled_token_index]\n",
+    "        decoded_sentence += sampled_char\n",
+    "\n",
+    "        # Exit condition: either hit max length\n",
+    "        # or find stop character.\n",
+    "        if sampled_char == \"\\n\" or len(decoded_sentence) > max_decoder_seq_length:\n",
+    "            stop_condition = True\n",
+    "\n",
+    "        # Update the target sequence (of length 1).\n",
+    "        target_seq = np.zeros((1, 1, num_decoder_tokens))\n",
+    "        target_seq[0, 0, sampled_token_index] = 1.0\n",
+    "\n",
+    "        # Update states\n",
+    "        states_value = [h, c]\n",
+    "    return decoded_sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transcribe_audio(audio_file):\n",
+    "\n",
+    "    input_array = audio_file_prep(audio_file)\n",
+    "    max_encoder_seq_length = len(input_array)\n",
+    "    \n",
+    "    input_data = np.zeros( (max_encoder_seq_length, num_encoder_tokens), dtype=\"float32\")\n",
+    "    \n",
+    "    for t, val in enumerate(input_array):\n",
+    "        input_data[t, int(val*255)] = 1.0\n",
+    "    input_data[t + 1 :, 0] = 1.0\n",
+    "\n",
+    "\n",
+    "    decoded_sentence = decode_sequence(input_data)\n",
+    "\n",
+    "    return decoded_sentence\n"
+   ]
   }
  ],
  "metadata": {
