--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow import keras\n",
     "import numpy as np\n",
-    "from datasets import load_dataset\n",
-    "import os.path\n",
     "%run data_preprocessing.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Constants used throughout the rest of the code\n",
+    "\n",
     "LATENT_DIM = 256\n",
     "\n",
     "target_characters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q','r','s','t','u','v','w','x','y','z',' ']\n",
@@ -27,16 +27,39 @@
     "\n",
     "num_encoder_tokens = 256\n",
     "num_decoder_tokens = len(target_characters)\n",
-    "max_decoder_seq_length = 200\n",
-    "\n",
-    "\n"
+    "max_decoder_seq_length = 200\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-09 12:58:11.296806: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-12-09 12:58:11.298648: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-12-09 12:58:11.299784: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n",
+      "2023-12-09 12:58:11.526615: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-12-09 12:58:11.528787: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-12-09 12:58:11.530490: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n",
+      "2023-12-09 12:58:11.817500: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_2_grad/concat/split_2/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_2_grad/concat/split_2/split_dim}}]]\n",
+      "2023-12-09 12:58:11.818949: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_grad/concat/split/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_grad/concat/split/split_dim}}]]\n",
+      "2023-12-09 12:58:11.820180: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'gradients/split_1_grad/concat/split_1/split_dim' with dtype int32\n",
+      "\t [[{{node gradients/split_1_grad/concat/split_1/split_dim}}]]\n"
+     ]
+    }
+   ],
    "source": [
     "model = keras.models.load_model(\"s2s_model.keras\")\n",
     "\n",
@@ -67,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +148,6 @@
     "        input_data[t, int(val*255)] = 1.0\n",
     "    input_data[t + 1 :, 0] = 1.0\n",
     "\n",
-    "\n",
     "    decoded_sentence = decode_sequence(input_data)\n",
     "\n",
     "    return decoded_sentence\n"
@@ -139,7 +161,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.0"
   }
  },
